--- a/package.json
+++ b/package.json
@@ -5,15 +5,27 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@vueuse/core": "^8.7.5",
+    "pinia": "^2.0.14",
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.25.2",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
     "@vitejs/plugin-vue": "^2.3.3",
+    "eslint": "^8.18.0",
+    "eslint-plugin-vue": "^9.1.1",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
-    "vue-tsc": "^0.34.7"
+    "vite-plugin-windicss": "^1.8.4",
+    "vitest": "^0.16.0",
+    "vue-tsc": "^0.34.7",
+    "windicss": "^3.5.5"
   }
 }
