--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^8.7.5",
+    "element-plus": "^2.2.6",
     "pinia": "^2.0.14",
     "vue": "^3.2.25"
   },
